gcc/testsuite/rust/rustc/ui/parser/macro/macro-doc-comments-1.rs
macro_rules! outer {
    (#[$outer:meta]) => ()
}

outer! {
    //! Inner
// { dg-error "" "" { target *-*-* } .-1 }

fn main() { }

